k8s/gce/istio/myhero/k8s_myhero_ernst.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myhero-ernst
  namespace: myhero
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myhero
        tier: ernst
    spec:
      containers:
      - name: myhero-ernst
        image: juliocisco/myhero-ernst:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 32M
      restartPolicy: Always
