k8s/gce/istio/myhero/k8s_myhero_app.yml
apiVersion: v1
kind: Service
metadata:
  name: myhero-app
  namespace: myhero
  labels:
    app: myhero
    tier: app
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: myhero
    tier: app
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myhero-app
  namespace: myhero
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: myhero
        tier: app
    spec:
      containers:
      - name: myhero-app
        image: juliocisco/myhero-app:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 48M
      restartPolicy: Always
