k8s/gce/istio/myhero/k8s_myhero_data.yml
apiVersion: v1
kind: Service
metadata:
  name: myhero-data
  namespace: myhero
  labels:
    app: myhero
    tier: data
spec:
  ports:
  - port: 80
    name: tcp	# myhero-data does not serve http, but tcp
    targetPort: http
  selector:
    app: myhero
    tier: data
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhero-data
  namespace: myhero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhero
      tier: data
  template:
    metadata:
      labels:
        app: myhero
        tier: data
    spec:
      containers:
      - name: myhero-data
        image: juliocisco/myhero-data:latest
        livenessProbe:
          httpGet:
            path: /hero_list
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /hero_list
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 64M
      restartPolicy: Always
