k8s/gce/istio/myhero/k8s_myhero_mosca.yml
apiVersion: v1
kind: Service
metadata:
  name: myhero-mosca
  namespace: myhero
  labels:
    app: myhero
    tier: mosca
spec:
  ports:
  - port: 1883
    protocol: TCP
    name: mqtt
    targetPort: 1883
  selector:
    app: myhero
    tier: mosca
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhero-mosca
  namespace: myhero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhero
      tier: mosca
  template:
    metadata:
      labels:
        app: myhero
        tier: mosca
    spec:
      containers:
      - name: myhero-mosca
        image: matteocollina/mosca:latest
        ports:
        - containerPort: 1883
          hostPort: 1883
#          name: mqtt
          protocol: TCP
#        livenessProbe:
#          tcpSocket:
#            port: 1883
#          initialDelaySeconds: 5
#          periodSeconds: 5
#        readinessProbe:
#          tcpSocket:
#            port: 1883
#          initialDelaySeconds: 5
#          periodSeconds: 5
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 64M
      restartPolicy: Always
