k8s/gce/istio/myhero/istio_myhero_spark_external.yml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: spark-server
spec:
  hosts:
  - webexapis.com
  ports:
  - number: 443
    name: https
    protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: spark-server
spec:
  host: webexapis.com
  trafficPolicy:
    tls:
      mode: SIMPLE # initiates HTTPS when talking to api.ciscospark.com
